// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField Component with custom assistive text props should return a CheckboxField that contains custom assistive text props 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
  >
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
  <div
    className="c3"
    id="exampleColorHelp"
  >
    Select at least one
  </div>
</div>
`;

exports[`CheckboxField Component with custom controlGroupProps should return a CheckboxField that contains custom controlGroupProps 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 0;
  padding-top: 0;
  width: 100%;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
  >
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxField Component with custom controlLabelProps should return a CheckboxField that contains custom controlLabelProps 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxField Component with custom wrapper props should return a CheckboxField that contain custom wrapper props 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
  >
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxField Component with no label should return a CheckboxField that contains no ControlLabel 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
  >
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c2"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component base should return a CheckboxFieldComponent that contains CheckboxComponent object 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with 1 plaintext should return a CheckboxFieldComponent that contains CheckboxComponent object with plainText 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  width: 100%;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-bottom: 1rem;
  padding-top: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    disabled={false}
  >
    <div>
      Red
    </div>
  </div>
  <div
    className="c3"
    id="exampleColorHelp"
  >
    Please select one
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with 2 plaintext should return a CheckboxFieldComponent that contains CheckboxComponent object with disabled 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  width: 100%;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-bottom: 1rem;
  padding-top: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    disabled={false}
  >
    <div>
      Red, Yellow
    </div>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with assistive text should return a CheckboxFieldComponent that contains CheckboxComponent with assistive text 1`] = `
.c4 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color*
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
  <div
    className="c4"
    id="exampleColorHelp"
  >
    Tell me your color
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with disabled should return a CheckboxFieldComponent that contains CheckboxComponent object with disabled 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  opacity: 0.6;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={true}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={true}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={true}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={true}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={true}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={true}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with flex-direction should return a CheckboxFieldComponent that contains CheckboxComponent object with flex-direction 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with flex-direction should return a CheckboxFieldComponent that contains CheckboxComponent object with flex-direction 2`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with required should return a CheckboxFieldComponent that contains CheckboxComponent is required 1`] = `
.c4 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color*
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={null}
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
  <div
    className="c4"
    id="exampleColorHelp"
  >
    *Required
  </div>
</div>
`;

exports[`CheckboxFieldComponent Component with validationError should return a CheckboxFieldComponent that contains CheckboxComponent validationError 1`] = `
.c4 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: auto;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  position: relative;
  top: auto;
  left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c3 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-right: 1rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="exampleColor"
  >
    Color*
  </label>
  <div
    className="c2"
    id=""
  >
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={true}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="red"
      />
      Red
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="yellow"
      />
      Yellow
    </label>
    <label
      className="c3"
      disabled={false}
      id="exampleColor"
      value={
        Array [
          "red",
        ]
      }
    >
      <input
        checked={false}
        disabled={false}
        id="exampleColor"
        name="Color"
        onChange={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "marginRight": "0.5rem",
          }
        }
        type="checkbox"
        value="green"
      />
      Green
    </label>
  </div>
  <div
    className="c4"
    id="exampleColorError"
  >
    This is required
  </div>
</div>
`;
